# pulseaudio_speech_enhancement

android/app/: build.gradle
android/app/src/androidTest/java/com/example/realtime_ns/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/realtime_ns/: MainActivity.kt
android/app/src/main/java/com/example/realtime_ns/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/example/realtime_ns/: ExampleUnitTest.kt
android/testRecAndPlay/: build.gradle  settings.gradle
android/testRecAndPlay/app/: build.gradle
android/testRecAndPlay/app/src/androidTest/java/com/example/test_rec_and_play/: ExampleInstrumentedTest.java
android/testRecAndPlay/app/src/main/: AndroidManifest.xml
android/testRecAndPlay/app/src/main/java/com/example/testRecAndPlay/: MainActivity.java  RealtimeNS.java
android/testRecAndPlay/app/src/main/jni/: CMakeLists.txt
android/testRecAndPlay/app/src/main/jni/base/: audio_ring_buffer.cpp  audio_ring_buffer.h  define_variables.h  ring_buffer.c  rtns_model.cpp  rtns_model.h
android/testRecAndPlay/app/src/main/jni/base/include/: ring_buffer.h  rtns_model.h
android/testRecAndPlay/app/src/main/jni/base/include/MNN/: MNNDefine.h  MNNSharedContext.h
android/testRecAndPlay/app/src/main/jni/base/include/MNN/expr/: NeuralNetWorkOp.hpp
android/testRecAndPlay/app/src/main/jni/impl/: jni_rt_impl.cpp  rt_impl.cpp  rt_impl.h
android/testRecAndPlay/app/src/main/res/layout/: activity_main.xml
android/testRecAndPlay/app/src/main/res/values/: strings.xml  themes.xml
android/testRecAndPlay/app/src/main/res/values-night/: themes.xml
android/testRecAndPlay/app/src/test/java/com/example/test_rec_and_play/: ExampleUnitTest.java
deployment/denoiser/: audio.py  demucs.py  enhance.py  live.py  pretrained.py  resample.py  utils.py
utils/: audio.py  downsample.py  metrics.py  wiener.py
